k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matchup-staging
  labels:
    app: matchup
    env: staging
